# VulkanProfiler

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  index.html
Sample/: Args.cpp  Args.h  CMakeLists.txt  Device.cpp  Device.h  Image.cpp  Image.h  Sample.cpp  Shaders.h  SwapChain.cpp  SwapChain.h
Sample/shaders/: CMakeLists.txt  FragmentShader.frag.hlsl  VertexShader.vert.hlsl
Source/profiler/: CMakeLists.txt  profiler.cpp  profiler.h  profiler_config.cpp  profiler_data_aggregator.h  profiler_memory_manager.h  profiler_query_pool.cpp  profiler_query_pool.h  profiler_shader.h  profiler_stat_comparators.h
VkLayer_profiler_layer/: .clang-format  CMakeLists.txt  VkCommandBuffer_functions.cpp  VkCommandBuffer_functions.h  VkDevice_functions.cpp  VkDevice_functions.h  VkDispatch.h  VkInstance_functions.cpp  VkInstance_functions.h  VkLayer_profiler_layer.cpp  VkLayer_profiler_layer.def  VkLayer_profiler_layer.generated.h.in  VkLayer_profiler_layer.h  VkLayer_profiler_layer.json  VkLayer_profiler_layer.json.in  VkLayer_profiler_layer.map  VkLayer_profiler_layer.rc.in  VkLayer_profiler_layer_settings_aliases.json
VkLayer_profiler_layer/profiler/: CMakeLists.txt  imgui_impl_vulkan_layer.cpp  imgui_impl_vulkan_layer.h  profiler.cpp  profiler.h  profiler_allocator.cpp  profiler_allocator.h  profiler_checkpoints.h  profiler_child.h  profiler_command_buffer.cpp  profiler_command_buffer.h  profiler_command_buffer_query_pool.cpp  profiler_command_buffer_query_pool.h  profiler_command_pool.cpp  profiler_command_pool.h  profiler_command_tree.h  profiler_commands.h  profiler_commands.inl  profiler_config.cpp  profiler_config.h  profiler_console_output.cpp  profiler_console_output.h  profiler_counters.h  profiler_counters_android.inl  profiler_counters_linux.inl  profiler_counters_windows.inl  profiler_data.cpp  profiler_data.h  profiler_data_aggregator.cpp  profiler_data_aggregator.h  profiler_debug_utils.cpp  profiler_debug_utils.h  profiler_drawcall.h  profiler_etw_logger.cpp  profiler_etw_logger.h  profiler_frame_tree.h  profiler_frontend.cpp  profiler_frontend.h  profiler_hasher.h  profiler_helpers.h  (+32 more)
VkLayer_profiler_layer/profiler_ext/: CMakeLists.txt  VkProfilerEXT.cpp  VkProfilerEXT.h  VkProfilerObjectEXT.cpp  VkProfilerObjectEXT.h  VkProfilerTestingEXT.cpp  VkProfilerTestingEXT.h
VkLayer_profiler_layer/profiler_helpers/: CMakeLists.txt  profiler_csv_helpers.cpp  profiler_csv_helpers.h  profiler_data_helpers.cpp  profiler_data_helpers.h  profiler_json_builder.cpp  profiler_json_builder.h  profiler_json_common.h  profiler_json_parser.cpp  profiler_json_parser.h  profiler_memory_comparator.cpp  profiler_memory_comparator.h  profiler_metrics_set_file.cpp  profiler_metrics_set_file.h  profiler_string_serializer.cpp  profiler_string_serializer.h  profiler_string_serializer.in  profiler_time_helpers.h
VkLayer_profiler_layer/profiler_layer/: CMakeLists.txt  VkInstance_dispatch.cpp  VkInstance_dispatch.h  VkInstance_functions.cpp  VkInstance_functions.h  counters.cpp  counters.h  frame_stats.h  instance_functions.cpp  instance_functions.h  profiler.cpp  profiler.h  profiler_buffer.cpp  profiler_buffer.h  profiler_callbacks.h  profiler_counters.cpp  profiler_counters.h  profiler_frame_stats.h  profiler_helpers.h  profiler_image.cpp  profiler_image.h  profiler_overlay.cpp  profiler_overlay.h  profiler_overlay_font.cpp  profiler_overlay_font.h  profiler_overlay_state_factory.cpp  profiler_overlay_state_factory.h  profiler_resources.h  profiler_shaders.h
VkLayer_profiler_layer/profiler_layer_functions/: Dispatch.h  Helpers.h  VkCommandBuffer_functions.cpp  VkCommandBuffer_functions.h  VkDevice_functions.cpp  VkDevice_functions.h  VkDevice_functions_base.cpp  VkDevice_functions_base.h  VkDispatch.h  VkInstance_functions.cpp  VkInstance_functions.h  VkLoader_functions.cpp  VkLoader_functions.h  VkQueue_functions.cpp  VkQueue_functions.h
VkLayer_profiler_layer/profiler_layer_objects/: VkAllocator_object.h  VkDevice_object.h  VkInstance_object.h  VkObject.h  VkObject_Types.inl  VkPhysicalDevice_object.h  VkQueue_object.h  VkSurfaceKHR_object.h  VkSurfaceKhr_object.h  VkSwapchainKHR_object.h  VkSwapchainKhr_object.h  profiler_layer_frontend.cpp  profiler_layer_frontend.h
VkLayer_profiler_layer/profiler_output/: CMakeLists.txt  imgui_impl_vulkan_layer.h  profiler_output_console.cpp  profiler_output_console.h  profiler_output_overlay.cpp  profiler_output_overlay.h
VkLayer_profiler_layer/profiler_overlay/: CMakeLists.txt  imgui_impl_vulkan_layer.cpp  imgui_impl_vulkan_layer.h  imgui_impl_wayland.cpp  imgui_impl_wayland.h  imgui_impl_win32.cpp  imgui_impl_win32.h  imgui_impl_xcb.cpp  imgui_impl_xcb.h  imgui_impl_xkb.cpp  imgui_impl_xkb.h  imgui_impl_xlib.cpp  imgui_impl_xlib.h  imgui_window.h  profiler_overlay.cpp  profiler_overlay.h  profiler_overlay_assets.json  profiler_overlay_backend.cpp  profiler_overlay_backend.h  profiler_overlay_fonts.cpp  profiler_overlay_fonts.h  profiler_overlay_layer_backend.cpp  profiler_overlay_layer_backend.h  profiler_overlay_layer_backend_android.cpp  profiler_overlay_layer_backend_android.h  profiler_overlay_layer_backend_wayland.cpp  profiler_overlay_layer_backend_wayland.h  profiler_overlay_layer_backend_win32.cpp  profiler_overlay_layer_backend_win32.h  profiler_overlay_layer_backend_xcb.cpp  profiler_overlay_layer_backend_xcb.h  profiler_overlay_layer_backend_xkb.cpp  profiler_overlay_layer_backend_xkb.h  profiler_overlay_layer_backend_xlib.cpp  profiler_overlay_layer_backend_xlib.h  profiler_overlay_resources.cpp  profiler_overlay_resources.h  profiler_overlay_settings.cpp  profiler_overlay_settings.h  profiler_overlay_shader_view.cpp  (+2 more)
VkLayer_profiler_layer/profiler_standalone/: CMakeLists.txt  profiler_standalone.cpp  profiler_standalone.h  profiler_standalone_client.cpp  profiler_standalone_client.h  profiler_standalone_main.cpp  profiler_standalone_server.cpp  profiler_standalone_server.h
VkLayer_profiler_layer/profiler_tests/: CMakeLists.txt  profiler_command_buffer_tests.cpp  profiler_config_tests.cpp  (+7 more)
(+322 files in other folders)
